tests/sumo/basic/tls/NEMA/errors/1/tls_switch.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-01-05 08:24:53 by Eclipse SUMO sumo Version v1_11_0+0780-56b449e
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
        <additional-files value="input_additional.add.xml,input_additional2.add.xml"/>
    </input>

    <output>
        <write-license value="true"/>
    </output>

    <time>
        <end value="500"/>
    </time>

    <processing>
        <default.speeddev value="0"/>
    </processing>

    <report>
        <verbose value="true"/>
        <xml-validation value="never"/>
        <xml-validation.routes value="never"/>
        <duration-log.statistics value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<tlsSwitches xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tlsswitches_file.xsd">
   <tlsSwitch id="2881" programID="NEMA" fromLane="17276_2" toLane="-16037_0" begin="0.00" end="6.00" duration="6.00"/>
   <tlsSwitch id="2881" programID="NEMA" fromLane="17276_3" toLane="-16037_1" begin="0.00" end="6.00" duration="6.00"/>
</tlsSwitches>
